// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`double wildcard recursively imports all members from a namespace and its children: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "AA",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Namespace",
                "children": [
                  {
                    "$type": "OwningMembership",
                    "element": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "C",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                    "elements": [],
                  },
                ],
                "declaredName": "M",
                "prefixes": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "N4",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "MembershipImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": true,
              "reference": {
                "$type": "MembershipReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "OwningMembership",
                      "element": {
                        "$type": "Namespace",
                        "children": [
                          {
                            "$type": "OwningMembership",
                            "element": {
                              "$type": "Class",
                              "children": [],
                              "declaredName": "AA",
                              "heritage": [],
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                            "elements": [],
                          },
                          {
                            "$type": "OwningMembership",
                            "element": {
                              "$type": "Class",
                              "children": [],
                              "declaredName": "B",
                              "heritage": [],
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                            "elements": [],
                          },
                          {
                            "$type": "OwningMembership",
                            "element": {
                              "$type": "Namespace",
                              "children": [
                                {
                                  "$type": "OwningMembership",
                                  "element": {
                                    "$type": "Class",
                                    "children": [],
                                    "declaredName": "C",
                                    "heritage": [],
                                    "isSufficient": false,
                                    "prefixes": [],
                                    "typeRelationships": [],
                                  },
                                  "elements": [],
                                },
                              ],
                              "declaredName": "M",
                              "prefixes": [],
                            },
                            "elements": [],
                          },
                        ],
                        "declaredName": "N4",
                        "prefixes": [],
                      },
                      "elements": [],
                    },
                  },
                ],
              },
            },
          ],
          "declaredName": "N5",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": true,
              "reference": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "AA",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Namespace",
                            "children": [
                              {
                                "$type": "OwningMembership",
                                "element": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "C",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                                "elements": [],
                              },
                            ],
                            "declaredName": "M",
                            "prefixes": [],
                          },
                          "elements": [],
                        },
                      ],
                      "declaredName": "N4",
                      "prefixes": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "D",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "C",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "N6",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`imported elements can be filtered: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Metaclass",
                "children": [],
                "declaredName": "Approved",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "Annotations",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [
                  {
                    "$type": "OwningMembership",
                    "element": {
                      "$type": "MetadataFeature",
                      "about": [],
                      "children": [],
                      "heritage": [
                        {
                          "$type": "FeatureTyping",
                          "elements": [],
                          "reference": {
                            "$type": "MetaclassReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Namespace",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "element": {
                                        "$type": "Metaclass",
                                        "children": [],
                                        "declaredName": "Approved",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                      "elements": [],
                                    },
                                  ],
                                  "declaredName": "Annotations",
                                  "prefixes": [],
                                },
                              },
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Metaclass",
                                  "children": [],
                                  "declaredName": "Approved",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                      ],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                    "elements": [],
                  },
                ],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "NA",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "reference": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Metaclass",
                            "children": [],
                            "declaredName": "Approved",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                      ],
                      "declaredName": "Annotations",
                      "prefixes": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "NamespaceImport",
              "element": {
                "$type": "Package",
                "children": [
                  {
                    "$type": "NamespaceImport",
                    "elements": [],
                    "importsAll": false,
                    "isRecursive": false,
                    "reference": {
                      "$type": "NamespaceReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Namespace",
                            "children": [
                              {
                                "$type": "OwningMembership",
                                "element": {
                                  "$type": "Class",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "element": {
                                        "$type": "MetadataFeature",
                                        "about": [],
                                        "children": [],
                                        "heritage": [
                                          {
                                            "$type": "FeatureTyping",
                                            "elements": [],
                                            "reference": {
                                              "$type": "MetaclassReference",
                                              "parts": [
                                                {
                                                  "error": undefined,
                                                  "ref": {
                                                    "$type": "Namespace",
                                                    "children": [
                                                      {
                                                        "$type": "OwningMembership",
                                                        "element": {
                                                          "$type": "Metaclass",
                                                          "children": [],
                                                          "declaredName": "Approved",
                                                          "heritage": [],
                                                          "isSufficient": false,
                                                          "prefixes": [],
                                                          "typeRelationships": [],
                                                        },
                                                        "elements": [],
                                                      },
                                                    ],
                                                    "declaredName": "Annotations",
                                                    "prefixes": [],
                                                  },
                                                },
                                                {
                                                  "error": undefined,
                                                  "ref": {
                                                    "$type": "Metaclass",
                                                    "children": [],
                                                    "declaredName": "Approved",
                                                    "heritage": [],
                                                    "isSufficient": false,
                                                    "prefixes": [],
                                                    "typeRelationships": [],
                                                  },
                                                },
                                              ],
                                            },
                                          },
                                        ],
                                        "isNonunique": false,
                                        "isOrdered": false,
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                      "elements": [],
                                    },
                                  ],
                                  "declaredName": "A",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                                "elements": [],
                              },
                            ],
                            "declaredName": "NA",
                            "prefixes": [],
                          },
                        },
                      ],
                    },
                  },
                  {
                    "$type": "ElementFilterMembership",
                    "element": {
                      "$type": "OperatorExpression",
                      "children": [
                        {
                          "$type": "FeatureMembership",
                          "element": {
                            "$type": "Feature",
                            "children": [],
                            "heritage": [
                              {
                                "$type": "FeatureTyping",
                                "elements": [],
                                "reference": {
                                  "$type": "TypeReference",
                                  "parts": [
                                    {
                                      "error": undefined,
                                      "ref": {
                                        "$type": "Metaclass",
                                        "children": [],
                                        "declaredName": "Approved",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                  ],
                                },
                              },
                            ],
                            "isNonunique": false,
                            "isOrdered": false,
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                      ],
                      "heritage": [],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "operands": [
                        {
                          "$type": "FeatureReferenceExpression",
                          "children": [],
                          "expression": {
                            "$type": "ReturnParameterMembership",
                            "element": {
                              "$type": "Feature",
                              "children": [],
                              "heritage": [],
                              "isNonunique": false,
                              "isOrdered": false,
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                            "elements": [],
                          },
                          "heritage": [],
                          "isNonunique": false,
                          "isOrdered": false,
                          "isSufficient": false,
                          "prefixes": [],
                          "typeRelationships": [],
                        },
                      ],
                      "operator": "@",
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                    "elements": [],
                  },
                ],
                "prefixes": [],
              },
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
            },
          ],
          "declaredName": "N8",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "reference": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Metaclass",
                            "children": [],
                            "declaredName": "Approved",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                      ],
                      "declaredName": "Annotations",
                      "prefixes": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "NamespaceImport",
              "element": {
                "$type": "Package",
                "children": [
                  {
                    "$type": "NamespaceImport",
                    "elements": [],
                    "importsAll": false,
                    "isRecursive": false,
                    "reference": {
                      "$type": "NamespaceReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Namespace",
                            "children": [
                              {
                                "$type": "OwningMembership",
                                "element": {
                                  "$type": "Class",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "element": {
                                        "$type": "MetadataFeature",
                                        "about": [],
                                        "children": [],
                                        "heritage": [
                                          {
                                            "$type": "FeatureTyping",
                                            "elements": [],
                                            "reference": {
                                              "$type": "MetaclassReference",
                                              "parts": [
                                                {
                                                  "error": undefined,
                                                  "ref": {
                                                    "$type": "Namespace",
                                                    "children": [
                                                      {
                                                        "$type": "OwningMembership",
                                                        "element": {
                                                          "$type": "Metaclass",
                                                          "children": [],
                                                          "declaredName": "Approved",
                                                          "heritage": [],
                                                          "isSufficient": false,
                                                          "prefixes": [],
                                                          "typeRelationships": [],
                                                        },
                                                        "elements": [],
                                                      },
                                                    ],
                                                    "declaredName": "Annotations",
                                                    "prefixes": [],
                                                  },
                                                },
                                                {
                                                  "error": undefined,
                                                  "ref": {
                                                    "$type": "Metaclass",
                                                    "children": [],
                                                    "declaredName": "Approved",
                                                    "heritage": [],
                                                    "isSufficient": false,
                                                    "prefixes": [],
                                                    "typeRelationships": [],
                                                  },
                                                },
                                              ],
                                            },
                                          },
                                        ],
                                        "isNonunique": false,
                                        "isOrdered": false,
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                      "elements": [],
                                    },
                                  ],
                                  "declaredName": "A",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                                "elements": [],
                              },
                            ],
                            "declaredName": "NA",
                            "prefixes": [],
                          },
                        },
                      ],
                    },
                  },
                  {
                    "$type": "ElementFilterMembership",
                    "element": {
                      "$type": "OperatorExpression",
                      "children": [],
                      "heritage": [],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "operands": [
                        {
                          "$type": "OperatorExpression",
                          "children": [
                            {
                              "$type": "FeatureMembership",
                              "element": {
                                "$type": "Feature",
                                "children": [],
                                "heritage": [
                                  {
                                    "$type": "FeatureTyping",
                                    "elements": [],
                                    "reference": {
                                      "$type": "TypeReference",
                                      "parts": [
                                        {
                                          "error": undefined,
                                          "ref": {
                                            "$type": "Metaclass",
                                            "children": [],
                                            "declaredName": "Approved",
                                            "heritage": [],
                                            "isSufficient": false,
                                            "prefixes": [],
                                            "typeRelationships": [],
                                          },
                                        },
                                      ],
                                    },
                                  },
                                ],
                                "isNonunique": false,
                                "isOrdered": false,
                                "isSufficient": false,
                                "prefixes": [],
                                "typeRelationships": [],
                              },
                              "elements": [],
                            },
                          ],
                          "heritage": [],
                          "isNonunique": false,
                          "isOrdered": false,
                          "isSufficient": false,
                          "operands": [
                            {
                              "$type": "FeatureReferenceExpression",
                              "children": [],
                              "expression": {
                                "$type": "ReturnParameterMembership",
                                "element": {
                                  "$type": "Feature",
                                  "children": [],
                                  "heritage": [],
                                  "isNonunique": false,
                                  "isOrdered": false,
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                                "elements": [],
                              },
                              "heritage": [],
                              "isNonunique": false,
                              "isOrdered": false,
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                          ],
                          "operator": "@",
                          "prefixes": [],
                          "typeRelationships": [],
                        },
                      ],
                      "operator": "not",
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                    "elements": [],
                  },
                ],
                "prefixes": [],
              },
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
            },
          ],
          "declaredName": "N9",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`namespace members can be imported with qualified names: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "Membership",
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [
                {
                  "$type": "Annotation",
                  "element": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                  },
                  "elements": [],
                },
              ],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "D",
              "elements": [],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N1",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "MembershipImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "reference": {
                "$type": "MembershipReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "CCC",
                          "declaredShortName": "C",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "element": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* alias doc */",
                              },
                              "elements": [],
                            },
                          ],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "D",
                          "elements": [],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N1",
                      "prefixes": [],
                    },
                  },
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "OwningMembership",
                      "element": {
                        "$type": "Class",
                        "children": [],
                        "declaredName": "A",
                        "heritage": [],
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "MembershipImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "reference": {
                "$type": "MembershipReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "CCC",
                          "declaredShortName": "C",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "element": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* alias doc */",
                              },
                              "elements": [],
                            },
                          ],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "D",
                          "elements": [],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N1",
                      "prefixes": [],
                    },
                  },
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Membership",
                      "declaredName": "CCC",
                      "declaredShortName": "C",
                      "elements": [
                        {
                          "$type": "Annotation",
                          "element": {
                            "$type": "Documentation",
                            "about": [],
                            "body": "/* alias doc */",
                          },
                          "elements": [],
                        },
                      ],
                      "reference": {
                        "$type": "ElementReference",
                        "parts": [
                          {
                            "error": undefined,
                            "ref": {
                              "$type": "Class",
                              "children": [],
                              "declaredName": "B",
                              "heritage": [],
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "B",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Namespace",
                "children": [
                  {
                    "$type": "MembershipImport",
                    "elements": [],
                    "importsAll": false,
                    "isRecursive": false,
                    "reference": {
                      "$type": "MembershipReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Membership",
                            "declaredName": "CCC",
                            "declaredShortName": "C",
                            "elements": [
                              {
                                "$type": "Annotation",
                                "element": {
                                  "$type": "Documentation",
                                  "about": [],
                                  "body": "/* alias doc */",
                                },
                                "elements": [],
                              },
                            ],
                            "reference": {
                              "$type": "ElementReference",
                              "parts": [
                                {
                                  "error": undefined,
                                  "ref": {
                                    "$type": "Class",
                                    "children": [],
                                    "declaredName": "B",
                                    "heritage": [],
                                    "isSufficient": false,
                                    "prefixes": [],
                                    "typeRelationships": [],
                                  },
                                },
                              ],
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
                "declaredName": "M",
                "prefixes": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "N2",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`visibility affects the visibility of imported members: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "Membership",
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [
                {
                  "$type": "Annotation",
                  "element": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                  },
                  "elements": [],
                },
              ],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "D",
              "elements": [],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N1",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "AA",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Namespace",
                "children": [
                  {
                    "$type": "OwningMembership",
                    "element": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "C",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                    "elements": [],
                  },
                ],
                "declaredName": "M",
                "prefixes": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "N4",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "MembershipImport",
              "elements": [
                {
                  "$type": "Annotation",
                  "element": {
                    "$type": "Comment",
                    "about": [],
                    "body": "/* The imported membership is visible outside N7. */",
                  },
                  "elements": [],
                },
              ],
              "importsAll": false,
              "isRecursive": false,
              "reference": {
                "$type": "MembershipReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "CCC",
                          "declaredShortName": "C",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "element": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* alias doc */",
                              },
                              "elements": [],
                            },
                          ],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "D",
                          "elements": [],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N1",
                      "prefixes": [],
                    },
                  },
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "OwningMembership",
                      "element": {
                        "$type": "Class",
                        "children": [],
                        "declaredName": "A",
                        "heritage": [],
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                    },
                  },
                ],
              },
              "visibility": "public",
            },
            {
              "$type": "NamespaceImport",
              "elements": [
                {
                  "$type": "Annotation",
                  "element": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* None of the imported memberships are visible
             * outside of N7. */",
                  },
                  "elements": [],
                },
              ],
              "importsAll": false,
              "isRecursive": false,
              "reference": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "AA",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Namespace",
                            "children": [
                              {
                                "$type": "OwningMembership",
                                "element": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "C",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                                "elements": [],
                              },
                            ],
                            "declaredName": "M",
                            "prefixes": [],
                          },
                          "elements": [],
                        },
                      ],
                      "declaredName": "N4",
                      "prefixes": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N7",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Feature",
          "children": [],
          "declaredName": "A",
          "heritage": [
            {
              "$type": "FeatureTyping",
              "elements": [],
              "reference": {
                "$type": "TypeReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "MembershipImport",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "element": {
                                "$type": "Comment",
                                "about": [],
                                "body": "/* The imported membership is visible outside N7. */",
                              },
                              "elements": [],
                            },
                          ],
                          "importsAll": false,
                          "isRecursive": false,
                          "reference": {
                            "$type": "MembershipReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Namespace",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "element": {
                                        "$type": "Class",
                                        "children": [],
                                        "declaredName": "A",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                      "elements": [],
                                    },
                                    {
                                      "$type": "OwningMembership",
                                      "element": {
                                        "$type": "Class",
                                        "children": [],
                                        "declaredName": "B",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                      "elements": [],
                                    },
                                    {
                                      "$type": "Membership",
                                      "declaredName": "CCC",
                                      "declaredShortName": "C",
                                      "elements": [
                                        {
                                          "$type": "Annotation",
                                          "element": {
                                            "$type": "Documentation",
                                            "about": [],
                                            "body": "/* alias doc */",
                                          },
                                          "elements": [],
                                        },
                                      ],
                                      "reference": {
                                        "$type": "ElementReference",
                                        "parts": [
                                          {
                                            "error": undefined,
                                            "ref": {
                                              "$type": "Class",
                                              "children": [],
                                              "declaredName": "B",
                                              "heritage": [],
                                              "isSufficient": false,
                                              "prefixes": [],
                                              "typeRelationships": [],
                                            },
                                          },
                                        ],
                                      },
                                    },
                                    {
                                      "$type": "Membership",
                                      "declaredName": "D",
                                      "elements": [],
                                      "reference": {
                                        "$type": "ElementReference",
                                        "parts": [
                                          {
                                            "error": undefined,
                                            "ref": {
                                              "$type": "Class",
                                              "children": [],
                                              "declaredName": "B",
                                              "heritage": [],
                                              "isSufficient": false,
                                              "prefixes": [],
                                              "typeRelationships": [],
                                            },
                                          },
                                        ],
                                      },
                                      "visibility": "private",
                                    },
                                  ],
                                  "declaredName": "N1",
                                  "prefixes": [],
                                },
                              },
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "OwningMembership",
                                  "element": {
                                    "$type": "Class",
                                    "children": [],
                                    "declaredName": "A",
                                    "heritage": [],
                                    "isSufficient": false,
                                    "prefixes": [],
                                    "typeRelationships": [],
                                  },
                                  "elements": [],
                                },
                              },
                            ],
                          },
                          "visibility": "public",
                        },
                        {
                          "$type": "NamespaceImport",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "element": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* None of the imported memberships are visible
             * outside of N7. */",
                              },
                              "elements": [],
                            },
                          ],
                          "importsAll": false,
                          "isRecursive": false,
                          "reference": {
                            "$type": "NamespaceReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Namespace",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "element": {
                                        "$type": "Class",
                                        "children": [],
                                        "declaredName": "AA",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                      "elements": [],
                                    },
                                    {
                                      "$type": "OwningMembership",
                                      "element": {
                                        "$type": "Class",
                                        "children": [],
                                        "declaredName": "B",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                      "elements": [],
                                    },
                                    {
                                      "$type": "OwningMembership",
                                      "element": {
                                        "$type": "Namespace",
                                        "children": [
                                          {
                                            "$type": "OwningMembership",
                                            "element": {
                                              "$type": "Class",
                                              "children": [],
                                              "declaredName": "C",
                                              "heritage": [],
                                              "isSufficient": false,
                                              "prefixes": [],
                                              "typeRelationships": [],
                                            },
                                            "elements": [],
                                          },
                                        ],
                                        "declaredName": "M",
                                        "prefixes": [],
                                      },
                                      "elements": [],
                                    },
                                  ],
                                  "declaredName": "N4",
                                  "prefixes": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N7",
                      "prefixes": [],
                    },
                  },
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "A",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isNonunique": false,
          "isOrdered": false,
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`wildcard imports all public members from a namespace: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "Membership",
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [
                {
                  "$type": "Annotation",
                  "element": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                  },
                  "elements": [],
                },
              ],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "D",
              "elements": [],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N1",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "reference": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "OwningMembership",
                          "element": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "CCC",
                          "declaredShortName": "C",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "element": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* alias doc */",
                              },
                              "elements": [],
                            },
                          ],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "D",
                          "elements": [],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N1",
                      "prefixes": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "D",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "E",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "N3",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;
